# gbeml

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  index.data  index.html  index.js  index.wasm
.github/workflows/: build.yaml  test.yaml
public/: index.html
src/: CMakeLists.txt  alu.cc  alu.h  bus.cc  bus.h  cpu.cc  cpu.h  gameboy.cc  gameboy.h  main.cc  mbc.cc  mbc.h  minifb_window.h  opcode.cc  opcode_test.cc  register.cc  register.h  register_test.cc  rom.cc  types.cc  types.h  types_test.cc
src/app/: CMakeLists.txt
src/app/desktop/: CMakeLists.txt  main.cc
src/app/web/: CMakeLists.txt  main.cc
src/bus/: bus.cc  bus.h  bus_impl.cc  bus_impl.h
src/core/: CMakeLists.txt  gameboy.cc  gameboy.h
src/core/bus/: bus.cc  bus.h  bus_impl.cc  bus_impl.h  bus_impl_test.cc
src/core/cpu/: alu.cc  alu.h  alu_test.cc  cpu.cc  cpu.h  cpu_test.cc  opcode.cc  opcode.h  opcode_test.cc
src/core/display/: display.cc  display.h  display_impl.cc  display_impl.h  display_impl_test.cc
src/core/graphics/: color.h  dot.cc  dot.h  fetcher.cc  fetcher.h  lcd_stat.cc  lcd_stat.h  lcd_stat_test.cc  lcdc.cc  lcdc.h  lcdc_test.cc  mode.h  palette.cc  palette.h  palette_test.cc  pixel.cc  pixel.h  pixel_fifo.cc  pixel_fifo.h  pixel_fifo_test.cc  ppu.cc  ppu.h  ppu_impl.cc  ppu_impl.h  ppu_impl_test.cc  ppu_test.cc  sprite.cc  sprite.h  sprite_test.cc  tile.cc  tile.h  tile_test.cc
src/core/interrupt/: interrupt_controller.cc  interrupt_controller.h  interrupt_controller_impl.cc  interrupt_controller_impl.h  interrupt_controller_impl_test.cc
src/core/joypad/: joypad.cc  joypad.h  joypad_impl.cc  joypad_impl.h  joypad_impl_test.cc
src/core/log/: logging.h
src/core/memory/: mbc.cc  mbc.h  ram.cc  ram.h  ram_impl.cc  ram_impl.h  rom.cc  rom.h
src/core/register/: register.cc  register.h  register_test.cc
src/core/timer/: timer.cc  timer.h  timer_impl.cc  timer_impl.h  timer_impl_test.cc
src/core/types/: types.cc  types.h  types_test.cc
src/cpu/: alu.cc  alu.h  alu_test.cc  cpu.cc  cpu.h  cpu_test.cc  opcode.cc  opcode.h  opcode_test.cc  register.cc  register.h  register_test.cc
src/display/: display.cc  display.h  minifb_display.cc  minifb_display.h
src/driver/: CMakeLists.txt
src/driver/minifb/: minifb_display.cc  minifb_display.h  minifb_window.cc  minifb_window.h
src/driver/sdl/: sdl_window.cc  sdl_window.h
src/driver/stub/: stub_display.cc  stub_display.h
src/graphics/: color.h  display.cc  display.h  dot.cc  dot.h  ppu.cc  ppu.h  ppu_mode.h  ppu_test.cc
src/interrupt/: interrupt_controller.cc  interrupt_controller.h
src/memory/: mbc.cc  mbc.h  mmap.cc  mmap.h  ram.cc  ram.h  ram_impl.cc  ram_impl.h  rom.cc  rom.h
src/register/: register.cc  register.h  register_test.cc
src/types/: types.cc  types_test.cc
